--- a/examples/cluster/master/web/http.html
+++ b/examples/cluster/master/web/http.html
@@ -38,7 +38,7 @@
                 this.inputMessage = '';
             },
             sendMessageUseRequest: function () {
-                nano.request('room.message', { name: this.nickname, content: this.inputMessage }, function (data) {
+                nano.request('RoomService.SyncMessageAndResponse', { name: this.nickname, content: this.inputMessage }, function (data) {
                     console.log('Join response:', data);
                 });
             }
@@ -70,7 +70,6 @@
         console.log(data);
         if(data.code === 0) {
             v.messages.push({name:'system', content:data.result});
-            nano.on('onMessage', onMessage)
         }
     };
 
@@ -82,6 +81,7 @@
         nano.on("onNewUser", onNewUser);
         nano.on("onMembers", onMembers);
         nano.on("onBalance", onBalance);
+        nano.on("onMessage", onMessage);
         setTimeout(function () {
             nano.request("BindService.Login", {"nickname": nickname}, login);
         }, 100);
